Reorder server slides

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <section>
           <h2>Server</h2>
         </section>
+        <section data-markdown="md/routes.md"></section>
         <section>
+          <h2>Router</h2>
           <ul>
             <li>add_get</li>
             <li>add_post</li>
@@ -80,15 +82,12 @@
             <li>add_delete</li>
           </ul>
         </section>
-        <section data-markdown="md/routes.md"></section>
         <section>
           <h2>Questions?</h2>
         </section>
         <!--
           returning response
           returning errors
-          client (with as )
-          simple program
           running
           loop handlers
           url params
