Add simple server slide

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <section>
           <h2>Server</h2>
         </section>
+        <section data-markdown="md/simple_server.md"></section>
         <section data-markdown="md/routes.md"></section>
         <section>
           <h2>Router</h2>
