Add socketio slide

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <li>add_delete</li>
           </ul>
         </section>
+        <section data-markdown="md/socketio.md"></section>
         <section>
           <h2>Questions?</h2>
         </section>
