Add simplified testing slide

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         </section>
         <section data-markdown="md/websocket.md"></section>
         <section data-markdown="md/socketio.md"></section>
+        <section data-markdown="md/testing.md"></section>
         <section>
           <h2>Questions?</h2>
         </section>
