Add third party libraries slide

--- a/index.html
+++ b/index.html
@@ -107,15 +107,16 @@
         </section>
         <section data-markdown="md/low_level_server.md"></section>
         <section data-markdown="md/testing.md"></section>
+        <section data-markdown="md/third_party.md"></section>
         <section>
           <h2>Questions?</h2>
         </section>
         <!--
+          resources
           returning response
           returning errors
           loop handlers
           class based views
-          autoreloading
           middlewares?
         -->
 			</div>
