Add benchmarks slide

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <li>add_post</li>
             <li>add_patch</li>
             <li>add_delete</li>
+            <li>add_route</li>
           </ul>
         </section>
         <section>
@@ -108,17 +109,10 @@
         <section data-markdown="md/low_level_server.md"></section>
         <section data-markdown="md/testing.md"></section>
         <section data-markdown="md/third_party.md"></section>
+        <section data-markdown="md/benchmarks.md"></section>
         <section>
           <h2>Questions?</h2>
         </section>
-        <!--
-          resources
-          returning response
-          returning errors
-          loop handlers
-          class based views
-          middlewares?
-        -->
 			</div>
 		</div>
 
