Fix small typos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>aiohttp</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/solarized.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -26,7 +26,8 @@
 			<div class="slides">
         <section>
           <h2>aiohttp</h2>
-          <p>Paweł Fertyk</p>
+          <p>Paweł Fertyk (@pfertyk)</p>
+          <br/>
           <br/>
           <p>aiohttp.pfertyk.me</p>
         </section>
